scrollbar position fixed

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -97,6 +97,7 @@
     color: var(--text-color);
     overflow-y: auto;
     scroll-behavior:smooth;
+    overflow-y: scroll;
 }
 
 .main-content::-webkit-scrollbar {
@@ -109,9 +110,7 @@
 }
 
 .main-content::-webkit-scrollbar-track {
-    box-shadow: 0px 0px 1px var(--text-color);
     border-radius: 5px;
-    background-color: var(--bg-surface-color);
     overflow: hidden;
 }
 
